move assets to engine

--- a/app/assets/stylesheets/file_uploader.sass
+++ b/app/assets/stylesheets/file_uploader.sass
@@ -1,3 +1,6 @@
+@import bootstrap/buttons
+@import bootstrap/progress
+
 .clearfix
   *zoom: 1
   &:before
@@ -113,3 +116,4 @@
 
 .fileupload-new .fileupload-preview
   display: none
+
