--- a/app/views/uploadbox/images/_uploader.html.slim
+++ b/app/views/uploadbox/images/_uploader.html.slim
@@ -8,9 +8,9 @@
         span.btn.btn-file
           span.fileupload-new Escolher imagem
           span.fileupload-exists Alterar
-          input type="file" data-url="#{file_uploader.images_path}" name="image[file]"
+          input type="file" data-url="#{uploadbox.images_path}" name="image[file]"
         - if resource.image?
-          = link_to 'Excluir', file_uploader.image_path(resource.image), class: 'btn fileupload-exists', remote: true, method: :delete
+          = link_to 'Excluir', uploadbox.image_path(resource.image), class: 'btn fileupload-exists', remote: true, method: :delete
         - else
           = link_to 'Excluir', '#', class: 'btn fileupload-exists', remote: true, method: :delete
 
