--- a/app/views/uploadbox/images/_uploader.html.slim
+++ b/app/views/uploadbox/images/_uploader.html.slim
@@ -1,6 +1,9 @@
 = form.fields_for :image do
   div data-component="ImageUploader"
-    input name="#{upload_name}_id" data-item="id" type="hidden"
+    - if namespace
+      input name="[#{namespace}]#{upload_name}_id" data-item="id" type="hidden"
+    - else
+      input name="#{upload_name}_id" data-item="id" type="hidden"
     .fileupload data-provides="fileupload" class="fileupload-#{resource.send(upload_name).present? ? 'exists' : 'new'}"
       .fileupload-preview.thumbnail data-version="#{version}" data-width="#{width}" data-height="#{height}" style="width: #{width}px; height: #{height}px;"
         = img resource.send(upload_name).send(version) if resource.send(upload_name).present?
