Adding a class to div that has the uploader actions
Signed-off-by: Renato Carvalho <renatolz@gmail.com>

--- a/app/views/uploadbox/images/_uploader.html.slim
+++ b/app/views/uploadbox/images/_uploader.html.slim
@@ -10,7 +10,7 @@
           = img resource.send(upload_name).send(version)
         - elsif default
           = image_tag default, width: width, height: height
-      div
+      .fileupload-actions
         span.btn.btn-file
           span.fileupload-new = choose_label
           span.fileupload-exists = update_label
