--- a/app/views/uploadbox/images/_uploader.html.slim
+++ b/app/views/uploadbox/images/_uploader.html.slim
@@ -14,7 +14,15 @@
         span.btn.btn-file
           span.fileupload-new = choose_label
           span.fileupload-exists = update_label
-          input type="file" data-url="#{uploadbox.images_path}" name="image[file]"
+          input type="hidden" name="key"
+          input type="hidden" name="AWSAccessKeyId" value="#{ENV['S3_KEY']}"
+          input type="hidden" name="acl" value="public-read"
+          input type="hidden" name="policy"
+          input type="hidden" name="signature"
+          input type="hidden" name="success_action_status" value="201"
+          input type="hidden" name="success_action_redirect"
+
+          input type="file" data-callback-url="#{uploadbox.images_path}" data-url="https://#{ENV['S3_BUCKET']}.s3.amazonaws.com" name="image[file]"
           input type="hidden" name="image[imageable_type]" value="#{resource.class}"
           input type="hidden" name="image[upload_name]" value="#{upload_name}"
         - if removable
