namespace for assets

--- a/app/assets/stylesheets/uploadbox.sass
+++ b/app/assets/stylesheets/uploadbox.sass
@@ -1,134 +1,135 @@
 @import bootstrap/progress
 
-.btn
-  background-color: #f7f7f7
-  padding: 10px
-  text-align: center
-  text-decoration: none
+.uploadbox-image-uploader
+  .btn
+    background-color: #f7f7f7
+    padding: 10px
+    text-align: center
+    text-decoration: none
 
-.clearfix
-  *zoom: 1
-  &:before
-    display: table
-    content: ""
-    line-height: 0
-  &:after
-    display: table
-    content: ""
-    line-height: 0
-    clear: both
+  .clearfix
+    *zoom: 1
+    &:before
+      display: table
+      content: ""
+      line-height: 0
+    &:after
+      display: table
+      content: ""
+      line-height: 0
+      clear: both
 
-.hide-text
-  font: 0/0 a
-  color: transparent
-  text-shadow: none
-  background-color: transparent
-  border: 0
+  .hide-text
+    font: 0/0 a
+    color: transparent
+    text-shadow: none
+    background-color: transparent
+    border: 0
 
-.input-block-level
-  display: block
-  width: 100%
-  min-height: 30px
-  box-sizing: border-box
+  .input-block-level
+    display: block
+    width: 100%
+    min-height: 30px
+    box-sizing: border-box
 
-.btn-file
-  overflow: hidden
-  position: relative
-  vertical-align: middle
-  display: block
-  > input
+  .btn-file
+    overflow: hidden
+    position: relative
+    vertical-align: middle
+    display: block
+    > input
+      position: absolute
+      top: 0
+      right: 0
+      margin: 0
+      opacity: 0
+      filter: alpha(opacity = 0)
+      transform: translate(-300px, 0) scale(4)
+      font-size: 23px
+      direction: ltr
+      cursor: pointer
+      width: 100%
+
+  .fileupload
+    position: relative
+    background-color: #eee
+    text-align: center
+    .uneditable-input
+      display: inline-block
+      margin-bottom: 0px
+      vertical-align: middle
+      cursor: text
+    .thumbnail
+      overflow: hidden
+      display: inline-block
+      vertical-align: middle
+      text-align: center
+      > img
+        display: inline-block
+        vertical-align: middle
+        max-height: 100%
+    .btn
+      vertical-align: middle
+
+  .fileupload-exists .fileupload-new, .fileupload-new .fileupload-exists
+    display: none
+
+  .fileupload-inline .fileupload-controls
+    display: inline
+
+  .fileupload-new .input-append .btn-file
+    border-radius: 0 3px 3px 0
+
+  .thumbnail-borderless .thumbnail
+    border: none
+    padding: 0
+    border-radius: 0
+    box-shadow: none
+
+  .fileupload-new.thumbnail-borderless .thumbnail
+    border: 1px solid #ddd
+
+  .control-group
+    &.warning .fileupload
+      .uneditable-input
+        color: #a47e3c
+        border-color: #a47e3c
+      .fileupload-preview
+        color: #a47e3c
+      .thumbnail
+        border-color: #a47e3c
+    &.error .fileupload
+      .uneditable-input
+        color: #b94a48
+        border-color: #b94a48
+      .fileupload-preview
+        color: #b94a48
+      .thumbnail
+        border-color: #b94a48
+    &.success .fileupload
+      .uneditable-input
+        color: #468847
+        border-color: #468847
+      .fileupload-preview
+        color: #468847
+      .thumbnail
+        border-color: #468847
+
+  .fileupload-new .fileupload-preview
+    display: none
+
+  .fileupload-preview
+    text-align: center
+
+  .fileupload-remove
     position: absolute
     top: 0
     right: 0
-    margin: 0
-    opacity: 0
-    filter: alpha(opacity = 0)
-    transform: translate(-300px, 0) scale(4)
-    font-size: 23px
-    direction: ltr
-    cursor: pointer
-    width: 100%
 
-.fileupload
-  position: relative
-  background-color: #eee
-  text-align: center
-  .uneditable-input
-    display: inline-block
-    margin-bottom: 0px
-    vertical-align: middle
-    cursor: text
-  .thumbnail
-    overflow: hidden
-    display: inline-block
-    vertical-align: middle
-    text-align: center
-    > img
-      display: inline-block
-      vertical-align: middle
-      max-height: 100%
-  .btn
-    vertical-align: middle
+  .fileupload-actions
+    position: relative
 
-.fileupload-exists .fileupload-new, .fileupload-new .fileupload-exists
-  display: none
-
-.fileupload-inline .fileupload-controls
-  display: inline
-
-.fileupload-new .input-append .btn-file
-  border-radius: 0 3px 3px 0
-
-.thumbnail-borderless .thumbnail
-  border: none
-  padding: 0
-  border-radius: 0
-  box-shadow: none
-
-.fileupload-new.thumbnail-borderless .thumbnail
-  border: 1px solid #ddd
-
-.control-group
-  &.warning .fileupload
-    .uneditable-input
-      color: #a47e3c
-      border-color: #a47e3c
-    .fileupload-preview
-      color: #a47e3c
-    .thumbnail
-      border-color: #a47e3c
-  &.error .fileupload
-    .uneditable-input
-      color: #b94a48
-      border-color: #b94a48
-    .fileupload-preview
-      color: #b94a48
-    .thumbnail
-      border-color: #b94a48
-  &.success .fileupload
-    .uneditable-input
-      color: #468847
-      border-color: #468847
-    .fileupload-preview
-      color: #468847
-    .thumbnail
-      border-color: #468847
-
-.fileupload-new .fileupload-preview
-  display: none
-
-.fileupload-preview
-  text-align: center
-
-.fileupload-remove
-  position: absolute
-  top: 0
-  right: 0
-
-.fileupload-actions
-  position: relative
-
-.progress
-  height: 14px
-  margin-bottom: 0
-  border-radius: 0
+  .progress
+    height: 14px
+    margin-bottom: 0
+    border-radius: 0
