--- a/app/views/uploadbox/images/_uploader.html.slim
+++ b/app/views/uploadbox/images/_uploader.html.slim
@@ -1,9 +1,9 @@
 = form.fields_for :image do
   .uploadbox-image-uploader data-component="ImageUploader"
     - if namespace
-      input name="[#{namespace}]#{upload_name}_id" data-item="id" type="hidden"
+      input name="[#{namespace}]#{upload_name}_id" data-item="id" type="hidden" value="#{resource.send(upload_name).try :id}"
     - else
-      input name="#{upload_name}_id" data-item="id" type="hidden"
+      input name="#{upload_name}_id" data-item="id" type="hidden" value="#{resource.send(upload_name).try :id}"
     .fileupload data-provides="fileupload" class="fileupload-#{(resource.send(upload_name).present? or default) ? 'exists' : 'new'}"
       .fileupload-preview.thumbnail data-version="#{version}" data-width="#{width}" data-height="#{height}" style="width: #{width}px; height: #{height}px;"
         - if resource.send(upload_name).present?
