--- a/app/views/uploadbox/images/_uploader.html.slim
+++ b/app/views/uploadbox/images/_uploader.html.slim
@@ -5,9 +5,9 @@
       input name="[#{namespace}]#{upload_name}_id" data-item="id" type="hidden" value="#{resource.send(upload_name).try :id}"
     - else
       input name="#{upload_name}_id" data-item="id" type="hidden" value="#{resource.send(upload_name).try :id}"
-    .fileupload data-provides="fileupload" class="fileupload-#{(resource.send(upload_name).present? or default) ? 'exists' : 'new'}"
+    .fileupload data-provides="fileupload" class="fileupload-#{(resource.send("#{upload_name}?") or default) ? 'exists' : 'new'}"
       .fileupload-preview.thumbnail data-version="#{version}" data-width="#{width}" data-height="#{height}" style="width: #{width}px; height: #{height}px;"
-        - if resource.send(upload_name).present?
+        - if resource.send("#{upload_name}?")
           = img resource.send(upload_name).send(version)
         - elsif default
           = image_tag default, width: width, height: height
