--- a/app/assets/stylesheets/uploadbox.sass
+++ b/app/assets/stylesheets/uploadbox.sass
@@ -3,7 +3,6 @@
 
 .uploadbox-image-uploader
   position: relative
-  padding-bottom: 30px
 
   .btn
     background-color: #f7f7f7
@@ -15,18 +14,17 @@
     .btn
       border: 1px solid darken(#f7f7f7, 20%)
 
-    .icon-picture-1
+    .icon
       opacity: .5
 
   .fileupload-exists
-    .icon-picture-1
+    .icon
       display: none
 
-  .icon-picture-1
+  .icon
     position: absolute
     top: 0
     left: 0
-    font-size: 40px
     width: 100%
     height: 100%
     opacity: .3
