--- a/app/assets/stylesheets/fontello.css
+++ b/app/assets/stylesheets/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('fontello.eot?99792958');
-  src: url('fontello.eot?99792958#iefix') format('embedded-opentype'),
-       url('fontello.woff?99792958') format('woff'),
-       url('fontello.ttf?99792958') format('truetype'),
-       url('fontello.svg?99792958#fontello') format('svg');
+  src: url('fontello.eot?18809145');
+  src: url('fontello.eot?18809145#iefix') format('embedded-opentype'),
+       url('fontello.woff?18809145') format('woff'),
+       url('fontello.ttf?18809145') format('truetype'),
+       url('fontello.svg?18809145#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?99792958#fontello') format('svg');
+    src: url('../font/fontello.svg?18809145#fontello') format('svg');
   }
 }
 */
@@ -51,3 +51,4 @@
 }
  
 .icon-picture-1:before { content: '\e800'; } /* '' */
+.icon-plus-1:before { content: '\e802'; } /* '' */
