--- a/app/views/uploadbox/images/_uploads_one.slim
+++ b/app/views/uploadbox/images/_uploads_one.slim
@@ -1,10 +1,11 @@
 = form.fields_for :image do
   - secure_random = SecureRandom.uuid
-  .uploadbox-image-uploader data-component="ImageUploader" style="width: #{width}px; height: #{height}px;"
+  .uploadbox-image-uploader.uploads-one data-component="ImageUploader" style="width: #{width}px; height: #{height}px;"
     - if namespace
-      input name="[#{namespace}]#{upload_name}_id" data-item="id" type="hidden" value="#{resource.send(upload_name).try :id}"
+      input name="[#{resource.class.name.underscore}][#{namespace}]#{upload_name}" data-item="id" type="hidden" value="#{resource.send(upload_name).try :id}"
     - else
-      input name="#{upload_name}_id" data-item="id" type="hidden" value="#{resource.send(upload_name).try :id}"
+      input name="[#{resource.class.name.underscore}]#{upload_name}" data-item="id" type="hidden" value="#{resource.send(upload_name).try :id}"
+
     .fileupload data-provides="fileupload" class="fileupload-#{(resource.send("#{upload_name}?") or default) ? 'exists' : 'new'}"
       .fileupload-preview.thumbnail data-version="#{version}" data-width="#{width}" data-height="#{height}" style="width: #{width}px; height: #{height}px;"
         - if resource.send("#{upload_name}?")
@@ -16,8 +17,10 @@
         span.btn.btn-file style="width: #{width}px; height: #{height}px;"
           span.fileupload-new = choose_label
           span.fileupload-exists = update_label
-          i.icon-picture-1 style="line-height: #{height}px"
-          input type="file" name="image[file]" data-callback-url="#{uploadbox.images_path}" data-find-url="#{uploadbox.find_images_path(format: :json)}" data-url="https://#{ENV['S3_BUCKET']}.s3.amazonaws.com/" data-secure-random="#{secure_random}" accept="image/x-png, image/gif, image/jpeg" style="display: none; width: #{width}px; height: #{height}px;"
+          i.icon.icon-picture-1 style="line-height: #{height}px; font-size: #{(width * 0.4).to_i}px"
+
+
+          input type="file" name="image[file]" data-callback-url="#{uploadbox.images_path}" data-find-url="#{uploadbox.find_images_path(format: :json)}" data-url="https://#{ENV['S3_BUCKET']}.s3.amazonaws.com/" data-secure-random="#{secure_random}" accept="image/png image/x-png, image/gif, image/jpeg" style="display: none; width: #{width}px; height: #{height}px;"
           input type="hidden" name="policy" value="#{s3_policy}"
           input type="hidden" name="signature" value="#{s3_signature}"
           input type="hidden" name="AWSAccessKeyId" value="#{ENV['S3_KEY']}"
