--- a/app/views/uploadbox/images/_uploads_many.slim
+++ b/app/views/uploadbox/images/_uploads_many.slim
@@ -15,10 +15,10 @@
             span.fileupload-exists = update_label
             i.icon.icon-plus-1 style="line-height: #{height}px; font-size: #{(width * 0.4).to_i}px"
 
-            input type="file" name="image[file]" data-callback-url="#{uploadbox.images_path}" data-find-url="#{uploadbox.find_images_path(format: :json)}" data-url="https://#{ENV['S3_BUCKET']}.s3.amazonaws.com/" accept="image/png image/x-png, image/gif, image/jpeg" style="display: none; width: #{width}px; height: #{height}px;" multiple="true"
+            input type="file" name="image[file]" data-callback-url="#{uploadbox.images_path}" data-find-url="#{uploadbox.find_images_path(format: :json)}" data-url="https://#{CarrierWave::Uploader::Base.fog_directory}.s3.amazonaws.com/" accept="image/png image/x-png, image/gif, image/jpeg" style="display: none; width: #{width}px; height: #{height}px;" multiple="true"
             input type="hidden" name="policy" value="#{s3_policy}"
             input type="hidden" name="signature" value="#{s3_signature}"
-            input type="hidden" name="AWSAccessKeyId" value="#{ENV['S3_KEY']}"
+            input type="hidden" name="AWSAccessKeyId" value="#{CarrierWave::Uploader::Base.fog_credentials[:aws_access_key_id]}"
             input type="hidden" name="acl" value="public-read"
             input type="hidden" name="key"
 
@@ -47,10 +47,10 @@
               span.fileupload-exists = update_label
               i.icon.icon-plus-1 style="line-height: #{height}px; font-size: #{(width * 0.4).to_i}px"
 
-              input type="file" name="image[file]" data-callback-url="#{uploadbox.images_path}" data-find-url="#{uploadbox.find_images_path(format: :json)}" data-url="https://#{ENV['S3_BUCKET']}.s3.amazonaws.com/" accept="image/png image/x-png, image/gif, image/jpeg" style="display: none; width: #{width}px; height: #{height}px;" multiple="true"
+              input type="file" name="image[file]" data-callback-url="#{uploadbox.images_path}" data-find-url="#{uploadbox.find_images_path(format: :json)}" data-url="https://#{CarrierWave::Uploader::Base.fog_directory}.s3.amazonaws.com/" accept="image/png image/x-png, image/gif, image/jpeg" style="display: none; width: #{width}px; height: #{height}px;" multiple="true"
               input type="hidden" name="policy" value="#{s3_policy}"
               input type="hidden" name="signature" value="#{s3_signature}"
-              input type="hidden" name="AWSAccessKeyId" value="#{ENV['S3_KEY']}"
+              input type="hidden" name="AWSAccessKeyId" value="#{CarrierWave::Uploader::Base.fog_credentials[:aws_access_key_id]}"
               input type="hidden" name="acl" value="public-read"
               input type="hidden" name="key"
 
