--- a/app/assets/stylesheets/uploadbox.sass
+++ b/app/assets/stylesheets/uploadbox.sass
@@ -8,26 +8,6 @@
     text-align: center
     text-decoration: none
     box-sizing: border-box
-    border: 1px solid #f7f7f7
-  &:hover
-    .btn
-      border: 1px solid darken(#f7f7f7, 20%)
-
-    .icon
-      opacity: .5
-
-  .fileupload-exists
-    .icon
-      display: none
-
-  .icon
-    position: absolute
-    top: 0
-    left: 0
-    width: 100%
-    height: 100%
-    opacity: .3
-
 
   .fileupload
     &:before
@@ -46,10 +26,10 @@
       top: 10px
 
     &.uploading:before
-      content: 'Enviando...'
+      content: 'Enviando'
 
     &.processing:before
-      content: 'Processando... Quase lá.'
+      content: 'Processando'
 
 
   .fileupload-new .btn.fileupload-exists
@@ -127,15 +107,6 @@
       margin-bottom: 0px
       vertical-align: middle
       cursor: text
-    .thumbnail
-      overflow: hidden
-      display: inline-block
-      vertical-align: middle
-      text-align: center
-      > img
-        display: block
-        vertical-align: middle
-        max-height: 100%
     .btn
       vertical-align: middle
 
@@ -148,14 +119,6 @@
   .fileupload-new .input-append .btn-file
     border-radius: 0 3px 3px 0
 
-  .thumbnail-borderless .thumbnail
-    border: none
-    border-radius: 0
-    box-shadow: none
-
-  .fileupload-new.thumbnail-borderless .thumbnail
-    border: 1px solid #ddd
-
   .control-group
     &.warning .fileupload
       .uneditable-input
@@ -163,24 +126,18 @@
         border-color: #a47e3c
       .fileupload-preview
         color: #a47e3c
-      .thumbnail
-        border-color: #a47e3c
     &.error .fileupload
       .uneditable-input
         color: #b94a48
         border-color: #b94a48
       .fileupload-preview
         color: #b94a48
-      .thumbnail
-        border-color: #b94a48
     &.success .fileupload
       .uneditable-input
         color: #468847
         border-color: #468847
       .fileupload-preview
         color: #468847
-      .thumbnail
-        border-color: #468847
 
   .fileupload-new .fileupload-preview
     display: none
