--- a/spec/dummy/app/views/posts/show.html.erb
+++ b/spec/dummy/app/views/posts/show.html.erb
@@ -6,6 +6,7 @@
 </p>
 
 <p>
+  <%= img @post.picture.big, alt: 'Lorem ipsum' %>
   <strong>Regular:</strong>
   <%= img @post.picture.regular, alt: 'Lorem ipsum' %>
   <strong>Thumb:</strong>
