--- a/app/assets/stylesheets/uploadbox.sass
+++ b/app/assets/stylesheets/uploadbox.sass
@@ -99,14 +99,12 @@
       width: 100%
 
     .fileupload-exists
-      margin-left: -9999px
+      display: none
 
     .fileupload-new
       position: absolute
       top: 50%
       left: 50%
-      margin-top: -14px
-      margin-left: -39px
       display: inline-block
       background: #e5e5e5
       font-size: 11px
