--- a/spec/dummy/app/views/posts/_form.slim
+++ b/spec/dummy/app/views/posts/_form.slim
@@ -9,7 +9,7 @@
 
   .field
     = f.label 'Foto'
-    = f.uploads_one :picture, preview: :big
+    = f.uploads_one :picture, preview: :big, choose_label: 'Escolher Lorem ipsum dolor'
 
   hr
   p = @post.images.size
