--- a/app/views/uploadbox/images/_uploads_one.slim
+++ b/app/views/uploadbox/images/_uploads_one.slim
@@ -26,7 +26,7 @@
           input type="hidden" name="acl" value="public-read"
           input type="hidden" name="key" value="uploads/#{secure_random}/"
 
-          input type="hidden" name="image[imageable_type]" value="#{resource.class}"
+          input type="hidden" name="image[imageable_type]" value="#{resource.class.base_class}"
           input type="hidden" name="image[upload_name]" value="#{upload_name}"
         - if removable
           - if resource.send(upload_name).present?
